--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,29 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+nav {
+  padding: 20px 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+#login {
+  margin-left: 20px;
+  margin-top: 20px;
+  width: 500px;
+  padding: 10px;
+  border: 1px solid;
+}
+
+#loginButton{
+  width: 150px;
+  background: #009ffd;
+  color: aliceblue;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.5);
+  /* padding: 10px 25px; */
+  display: inline-block;
+  font-size: 20px;
+  margin-left:145px;
+
+}
