--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,10 @@ nav {
   margin-left:145px;
 
 }
+.signup {
+  margin-left: 20px;
+  margin-top: 20px;
+  width: 500px;
+  padding: 10px;
+  border: 1px solid;
+}
