--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -12,7 +14,10 @@ code {
     monospace;
 }
 
-
+.accordion>.card>.card-header {
+  border-radius: 0;
+  margin-bottom: 3px;
+}
 .card-deck {
   margin-left: 23px;
   margin-right: -12px;
@@ -74,24 +79,72 @@ nav {
 }
 
 .according{
-  width: 400px;
+  width: 470px;
   
 }
 .editor{
   height: 300px;
 }
-
-.editorText{
+.editore{
+  height: 400px;
+}
+.card-body {
+  flex: 1 1 auto;
+  min-height: 1px;
+  padding: 0.25rem;
+  height: 500px;
+}
+.edi{
   text-align: center;
     z-index: 200;
     position: absolute;
     bottom: 136px;
     left: 0;
     right: 0;
+}
+/* .canvas-wrapper{
+  width: 100%;
+  height: 100%;
+  position: relative;
+  -webkit-perspective: 100vw;
+  perspective: 100vw;
+} */
+/* .canvas-container{
+  width: 894px;
+    height: 129px;
+    position: relative;
+    user-select: none;
+
+} */
+/* .canvas{
+  position: absolute;
+  width: 894px;
+  height: 129px;
+  left: 0px;
+  top: 0px;
+  touch-action: none;
+  user-select: none;
+} */
+.productDisplay{
+  position: relative;
+      width: 100%;
+      height: 300px; 
+      
+}
+.editorText{
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  margin: auto;
+  text-align: center;
+  color: black;
+  display: inline-block;
     
 }
 .cardImg{
-  width: 300px;
+  width: 200px;
 }
 
 /* Set content for font-families */
@@ -136,4 +189,8 @@ nav {
 .ql-size-large,
 .ql-size span[data-value="large"]::before {
   font-size: 20px !important;
+}
+
+Quill.font-size1 {
+  font-size: 12px;
 }
